--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,14 @@
 allprojects {
+    ext.kotlin_version = '1.6.10' 
     repositories {
         google()
         mavenCentral()
+    
     }
+   dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+
 }
 
 rootProject.buildDir = "../build"
